# gravi2d

./: .gitignore  CMakeLists.txt  Physics.cu  Timer.hpp  Window.hpp
src/: Body.hpp  Physics.cu  Physics.hpp  Window.hpp  create_random_universe.hpp  main.cpp  random.hpp
